Correction mobile menu & mobile modal form

--- a/css/styles.css
+++ b/css/styles.css
@@ -223,8 +223,10 @@ img {
 .hero {
   background: #2e2f42;
   flex-shrink: 0;
-  background-image: linear-gradient(rgba(46, 47, 66, 0.7),
-      rgba(46, 47, 66, 0.7)),
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
     url(../images/hero/img-hero-mobile.jpg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -237,40 +239,50 @@ img {
 
 @media (min-resolution: 192dpi) {
   .hero {
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)),
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
       url(../images/hero/img-hero-mobile@2x.jpg);
   }
 }
 
 @media screen and (min-width: 768px) {
   .hero {
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)),
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
       url(../images/hero/img-hero-tablet.jpg);
   }
 }
 
 @media screen and (min-width: 768px) and (min-resolution: 192dpi) {
   .hero {
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)),
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
       url(../images/hero/img-hero-tablet@2x.jpg);
   }
 }
 
 @media screen and (min-width: 1158px) {
   .hero {
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)),
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
       url(../images/hero/img-hero.jpg);
   }
 }
 
 @media screen and (min-width: 1158px) and (min-resolution: 192dpi) {
   .hero {
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)),
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
       url(../images/hero/img-hero@2x.jpg);
   }
 }
@@ -1000,13 +1012,20 @@ img {
   /* display: flex;
   flex-direction: column; */
   padding: 72px 24px 24px 24px;
-  width: 408px;
-  min-height: 584px;
+  width: 288px;
+  min-height: 623px;
   border-radius: 4px;
   background: #fcfcfc;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+@media screen and (min-width: 768px) {
+  .modal {
+    width: 408px;
+    min-height: 584px;
+  }
 }
 
 .close-btn {
@@ -1178,13 +1197,16 @@ label {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.accept-checkbox:checked+.form-agreement .form-agreement-checkbox {
+.accept-checkbox:checked + .form-agreement .form-agreement-checkbox {
   background-color: #404bbf;
   border: none;
   fill: #f4f4fd;
 }
 
-.accept-checkbox:checked+.form-agreement .form-agreement-checkbox .icon-check-mark {
+.accept-checkbox:checked
+  + .form-agreement
+  .form-agreement-checkbox
+  .icon-check-mark {
   fill: #f4f4fd;
 }
 
@@ -1216,13 +1238,34 @@ label {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-input:focus+.form-icon {
+.form-input:focus + .form-icon {
   fill: #4d5ae5;
 }
 
 /* End Modal Form  */
 
 /* Mobile Menu */
+
+.mobile-menu {
+  position: fixed;
+  background: #fff;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu.is-open {
+  display: block;
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+  z-index: 999;
+  padding: 72px 24px 40px 16px;
+}
 
 .mobile-menu-btn {
   display: flex;
@@ -1239,43 +1282,21 @@ label {
   }
 }
 
-.mobile-menu {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #fff;
-  padding: 72px 16px 40px;
-  display: flex;
-  flex-direction: column;
-  transform: translateX(-100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.mobile-menu.is-open {
-  transform: translateX(0);
-}
-
-@media screen and (min-width: 768px) {
-  .mobile-menu {
-    display: none;
-  }
-}
-
 .mobile-menu-close-btn {
   position: absolute;
+  padding: 0;
   top: 24px;
   right: 24px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   width: 24px;
   height: 24px;
-  border: 1px solid #e7e9fc;
   border-radius: 50%;
-  background-color: white;
+  background-color: #fff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  align-self: flex-end;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
 }
 
 .mobile-menu-list {
@@ -1308,10 +1329,28 @@ label {
   color: #4d5ae5;
 }
 
-.mobile-menu-item:not(:last-child) {
+.mobile-menu-nav-item:first-child {
+  color: #404bbf;
+}
+
+.mobile-menu-nav-item:not(:last-child) {
+  margin-bottom: 40px;
+}
+
+.mobile-menu-nav-item:last-child {
+  margin-bottom: 168px;
+}
+
+.mobile-menu-contact-item:first-child {
   margin-bottom: 24px;
 }
 
+.mobile-menu-contact-item:last-child {
+  margin-bottom: 48px;
+}
+
 .mobile-menu-socials {
+  display: flex;
+  justify-content: center;
   gap: 40px;
 }
